--- a/index.html
+++ b/index.html
@@ -61,6 +61,17 @@
       </div>
     </main>
 
+    <footer>
+      <p>
+        License:
+        <a
+          href="https://github.com/VanFossen/resume-website-template/blob/main/LICENSE"
+          target="_blank"
+          >MIT</a
+        >
+      </p>
+    </footer>
+
     <div class="theme">
       <a onclick="handleIconToggle()">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
